--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -1,120 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DSP</title>
-</head>
-<body>
-    
-  <div class="container text-center" role="group" aria-label="Basic example">
-    <button (click)="showNewPromt()" type="button" class="btn btn-dark">New</button>
-    <button (click)="onDelete()"type="button" class="btn btn-dark">Delete</button>
-    <button (click)="onImport()"type="button" class="btn btn-dark">Import</button>
-    <button (click)="onExport()" type="button" class="btn btn-dark">Export</button>
-    <button type="button" class="btn btn-dark">Send</button>
-    <button type="button" class="btn btn-dark">Recieve</button>
-  </div>
+  </head>
+  <body>
+    <div class="container text-center" role="group" aria-label="Basic example">
+      <button (click)="showNewPromt()" type="button" class="btn btn-dark">
+        New
+      </button>
+      <button (click)="onDelete()" type="button" class="btn btn-dark">
+        Delete
+      </button>
+      <button (click)="onImport()" type="button" class="btn btn-dark">
+        Import
+      </button>
+      <button (click)="onExport()" type="button" class="btn btn-dark">
+        Export
+      </button>
+      <button (click)="onSend()" type="button" class="btn btn-dark">
+        Send
+      </button>
+      <button (click)="onReceieve()" type="button" class="btn btn-dark">
+        Recieve
+      </button>
+    </div>
 
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-       
-        <form *ngIf="isNewFormVisible" (ngSubmit)="onNewSubmit()" #userForm="ngForm">
-          <div class="mb-3">
-            <label for="name" class="form-label">Name:</label>
-            <input type="text" id="name" class="form-control" required [(ngModel)]="newData.name" name="name">
-          </div>
-          <div class="mb-3">
-            <label for="email" class="form-label">Email:</label>
-            <input type="email" id="email" class="form-control" required [(ngModel)]="newData.email" name="email">
-          </div>
-          <div class="mb-3">
-            <label for="password" class="form-label">Password:</label>
-            <input type="password" id="password" class="form-control" required [(ngModel)]="newData.password" name="password">
-          </div>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <form
+            *ngIf="isNewFormVisible"
+            (ngSubmit)="onNewSubmit()"
+            #userForm="ngForm"
+          >
+            <div class="mb-3">
+              <label for="name" class="form-label">Name:</label>
+              <input
+                type="text"
+                id="name"
+                class="form-control"
+                required
+                [(ngModel)]="newData.name"
+                name="name"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email:</label>
+              <input
+                type="email"
+                id="email"
+                class="form-control"
+                required
+                [(ngModel)]="newData.email"
+                name="email"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-label">Password:</label>
+              <input
+                type="password"
+                id="password"
+                class="form-control"
+                required
+                [(ngModel)]="newData.password"
+                name="password"
+              />
+            </div>
 
-          <div class="mb-3">
-            <label class="form-label">Algorithm:</label><br>
-            <div class="form-check form-check-inline">
-              <input type="radio" id="RSA" class="form-check-input" name="RSA" [(ngModel)]="newData.algorithm" value="RSA" required>
-              <label for="RSA" class="form-check-label">RSA</label>
+            <div class="mb-3">
+              <label class="form-label">Algorithm:</label><br />
+              <div class="form-check form-check-inline">
+                <input
+                  type="radio"
+                  id="RSA"
+                  class="form-check-input"
+                  name="RSA"
+                  [(ngModel)]="newData.algorithm"
+                  value="RSA"
+                  required
+                />
+                <label for="RSA" class="form-check-label">RSA</label>
+              </div>
             </div>
-          </div>
-        
-          <div class="mb-3">
-            <label class="form-label">Key Size:</label><br>
-            <div class="form-check form-check-inline">
-              <input type="radio" id="key1024" class="form-check-input" name="keySize" [(ngModel)]="newData.bitsize" [value]="1024" required>
-              <label for="key1024" class="form-check-label">1024</label>
+
+            <div class="mb-3">
+              <label class="form-label">Key Size:</label><br />
+              <div class="form-check form-check-inline">
+                <input
+                  type="radio"
+                  id="key1024"
+                  class="form-check-input"
+                  name="keySize"
+                  [(ngModel)]="newData.bitsize"
+                  [value]="1024"
+                  required
+                />
+                <label for="key1024" class="form-check-label">1024</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input
+                  type="radio"
+                  id="key2048"
+                  class="form-check-input"
+                  name="keySize"
+                  [(ngModel)]="newData.bitsize"
+                  [value]="2048"
+                  required
+                />
+                <label for="key2048" class="form-check-label">2048</label>
+              </div>
             </div>
-            <div class="form-check form-check-inline">
-              <input type="radio" id="key2048" class="form-check-input" name="keySize" [(ngModel)]="newData.bitsize" [value]="2048" required>
-              <label for="key2048" class="form-check-label">2048</label>
-            </div>
-          </div>
-          <button type="submit" class="btn btn-dark" [disabled]="!userForm.form.valid">Submit</button>
-        </form>
+            <button
+              type="submit"
+              class="btn btn-dark"
+              [disabled]="!userForm.form.valid"
+            >
+              Submit
+            </button>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
-  
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <h3>Private KeyRing</h3>
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th></th>
-              <th>Name</th>
-              <th>E-Mail</th>
-              <th>Algorithm</th>
-              <th>keyID</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let row of privateKeyRingData; let i = index">
-              <td>
-                <input class="form-check-input" type="checkbox" value="{{ row.key_id }}" id="flexCheckDefault" [checked]="checkboxStates[i]"
-                (change)="onCheckboxChange(i, $event ,row.key_id)">
-              </td>
-              <td>{{ row.name }}</td>
-              <td>{{ row.email }}</td>
-              <td>{{ 'RSA' }}</td>
-              <td>{{ row.key_id }}</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="col-md-6">
-        <h3>Public KeyRing</h3>
 
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th></th>
-              <th>Name</th>
-              <th>E-Mail</th>
-              <th>Algorithm</th>
-              <th>keyID</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let row of publicKeyRingData; let i = index">
-              <td>
-                <input class="form-check-input" type="checkbox" value="{{ row.key_id }}" id="flexCheckDefault" [checked]="checkboxStates[i]"
-                (change)="onCheckboxChange(i, $event ,row.key_id)">
-              </td>
-              <td>{{ row.name }}</td>
-              <td>{{ row.email }}</td>
-              <td>{{ 'RSA' }}</td>
-              <td>{{ row.key_id }}</td>
-            </tr>
-          </tbody>
-        </table>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h3>Private KeyRing</h3>
+          <table class="table table-bordered">
+            <thead>
+              <tr>
+                <th></th>
+                <th>Name</th>
+                <th>E-Mail</th>
+                <th>Algorithm</th>
+                <th>keyID</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let row of privateKeyRing; let i = index">
+                <td>
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    value="{{ row.key_id }}"
+                    id="flexCheckDefault"
+                    [checked]="checkboxStates[i]"
+                    (change)="onCheckboxChange(i, $event, row.key_id)"
+                  />
+                </td>
+                <td>{{ row.name }}</td>
+                <td>{{ row.email }}</td>
+                <td>{{ "RSA" }}</td>
+                <td>{{ row.key_id }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col-md-6">
+          <h3>Public KeyRing</h3>
+
+          <table class="table table-bordered">
+            <thead>
+              <tr>
+                <th></th>
+                <th>Name</th>
+                <th>E-Mail</th>
+                <th>Algorithm</th>
+                <th>keyID</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let row of publicKeyRing; let i = index">
+                <td>
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    value="{{ row.key_id }}"
+                    id="flexCheckDefault"
+                    [checked]="checkboxStates[i]"
+                    (change)="onCheckboxChange(i, $event, row.key_id)"
+                  />
+                </td>
+                <td>{{ row.name }}</td>
+                <td>{{ row.email }}</td>
+                <td>{{ "RSA" }}</td>
+                <td>{{ row.key_id }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
