--- a/frontend/src/app/import-page/import-page.component.html
+++ b/frontend/src/app/import-page/import-page.component.html
@@ -1,93 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container text-center">
-        <h1>Import key</h1>
+      <h1>Import key</h1>
     </div>
 
     <div class="container centered-radio-buttons">
-        <div class="radio-group">
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="exampleRadios" id="public" [(ngModel)]="keyType" (change)="onRadioKeyTypeChange($event)" value="public" checked>
-                <label class="form-check-label" for="public">
-                    Public key
-                </label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="exampleRadios" id="private" [(ngModel)]="keyType" (change)="onRadioKeyTypeChange($event)" value="private">
-                <label class="form-check-label" for="private">
-                    Private key 
-                </label>
-            </div>
+      <div class="radio-group">
+        <div class="form-check">
+          <input
+            class="form-check-input"
+            type="radio"
+            name="exampleRadios"
+            id="public"
+            [(ngModel)]="keyType"
+            (change)="onRadioKeyTypeChange($event)"
+            value="public"
+            checked
+          />
+          <label class="form-check-label" for="public"> Public key </label>
         </div>
+        <div class="form-check">
+          <input
+            class="form-check-input"
+            type="radio"
+            name="exampleRadios"
+            id="private"
+            [(ngModel)]="keyType"
+            (change)="onRadioKeyTypeChange($event)"
+            value="private"
+          />
+          <label class="form-check-label" for="private"> Private key </label>
+        </div>
+      </div>
     </div>
 
     <div class="container mt-5 text-center">
-        <form (ngSubmit)="onImport()" #form="ngForm">
-            <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" class="form-control" id="name" [(ngModel)]="importData.name" placeholder="Enter your name">
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" class="form-control" id="email" [(ngModel)]="importData.email" placeholder="Enter your email">
-            </div>
-            <div class="input-group mb-3">
-                <input type="file" class="form-control" id="inputGroupFile02" (change)="onFileSelected($event)">
-                <label class="input-group-text" for="inputGroupFile02">Upload</label>
-            </div>
-            <div class="form-group mt-3" *ngIf="showPrivateKeyRing">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" [(ngModel)]="importData.password" placeholder="Enter your password">
-            </div>
-            <button type="submit" class="btn btn-dark">Import</button>
-        </form>
+      <form (ngSubmit)="onImport()" #form="ngForm">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="name"
+            [(ngModel)]="importData.name"
+            placeholder="Enter your name"
+          />
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input
+            type="email"
+            class="form-control"
+            id="email"
+            [(ngModel)]="importData.email"
+            placeholder="Enter your email"
+          />
+        </div>
+        <div class="input-group mb-3">
+          <input
+            type="file"
+            class="form-control"
+            id="inputGroupFile02"
+            (change)="onFileSelected($event)"
+          />
+          <label class="input-group-text" for="inputGroupFile02">Upload</label>
+        </div>
+        <div class="form-group mt-3" *ngIf="showPrivateKeyRing">
+          <label for="password">Password</label>
+          <input
+            type="password"
+            class="form-control"
+            id="password"
+            [(ngModel)]="importData.password"
+            placeholder="Enter your password"
+          />
+        </div>
+        <button type="submit" class="btn btn-dark">Import</button>
+      </form>
     </div>
 
     <div class="container mt-4" *ngIf="showPublicKeyRing">
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th>Key ID</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let item of publicKeyRingData; let i = index">
-                    <td>{{ item.name }}</td>
-                    <td>{{ item.email }}</td>
-                    <td>{{ item.key_id }}</td>
-                </tr>
-            </tbody>
-        </table>
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Key ID</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of publicKeyRing; let i = index">
+            <td>{{ item.name }}</td>
+            <td>{{ item.email }}</td>
+            <td>{{ item.key_id }}</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
     <div class="container mt-4" *ngIf="showPrivateKeyRing">
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th>Key ID</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let item of privateKeyRingData; let i = index">
-                    <td>{{ item.name }}</td>
-                    <td>{{ item.email }}</td>
-                    <td>{{ item.key_id }}</td>
-                </tr>
-            </tbody>
-        </table>
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Key ID</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of privateKeyRing; let i = index">
+            <td>{{ item.name }}</td>
+            <td>{{ item.email }}</td>
+            <td>{{ item.key_id }}</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-
-
-
-</body>
+  </body>
 </html>
