finished frontend, minor backend changes

--- a/frontend/src/app/export-page/export-page.component.html
+++ b/frontend/src/app/export-page/export-page.component.html
@@ -65,7 +65,7 @@
                   This field is required.
                 </div>
               </div>
-              <button type="button" class="btn btn-dark ">Export</button>
+              <button type="submit" class="btn btn-dark ">Export</button>
             </form>
           </div> 
     </div>
@@ -108,7 +108,7 @@
                   This field is required.
                 </div>
               </div>
-              <button type="button" (click)="onExport()" class="btn btn-dark ">Export</button>
+              <button type="submit"  class="btn btn-dark ">Export</button>
             </form>
           </div> 
     </div>
