--- a/frontend/src/app/import-page/import-page.component.html
+++ b/frontend/src/app/import-page/import-page.component.html
@@ -18,7 +18,7 @@
             type="radio"
             name="exampleRadios"
             id="public"
-            [(ngModel)]="keyType"
+            [(ngModel)]="importData.type"
             (change)="onRadioKeyTypeChange($event)"
             value="public"
             checked
@@ -31,7 +31,7 @@
             type="radio"
             name="exampleRadios"
             id="private"
-            [(ngModel)]="keyType"
+            [(ngModel)]="importData.type"
             (change)="onRadioKeyTypeChange($event)"
             value="private"
           />
@@ -48,8 +48,9 @@
             type="text"
             class="form-control"
             id="name"
+            required
             [(ngModel)]="importData.name"
-            placeholder="Enter your name"
+            name="name"
           />
         </div>
         <div class="form-group">
@@ -58,8 +59,20 @@
             type="email"
             class="form-control"
             id="email"
+            required
             [(ngModel)]="importData.email"
-            placeholder="Enter your email"
+            name="email"
+          />
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input
+            type="password"
+            class="form-control"
+            id="password"
+            required
+            [(ngModel)]="importData.password"
+            name="password"
           />
         </div>
         <div class="input-group mb-3">
@@ -67,20 +80,12 @@
             type="file"
             class="form-control"
             id="inputGroupFile02"
+            required
             (change)="onFileSelected($event)"
           />
           <label class="input-group-text" for="inputGroupFile02">Upload</label>
         </div>
-        <div class="form-group mt-3" *ngIf="showPrivateKeyRing">
-          <label for="password">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            id="password"
-            [(ngModel)]="importData.password"
-            placeholder="Enter your password"
-          />
-        </div>
+        
         <button type="submit" class="btn btn-dark">Import</button>
       </form>
     </div>
